LIMO-182: Fixed text overflow ellipsis

--- a/src/components/livescore/ls-team-roster/_ls-team-roster.scss
+++ b/src/components/livescore/ls-team-roster/_ls-team-roster.scss
@@ -26,6 +26,7 @@
           padding-left: 7px;
           padding-right: 7px;
           overflow: hidden;
+          text-overflow: ellipsis;
 
           &_logo{
             max-height: 26px;
